--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -1,107 +1,175 @@
-name: Manual PR Creator
+name: Auto Release
 
 on:
-  workflow_dispatch:
-    inputs:
-      base:
-        description: 'Base branch'
-        required: true
-        default: 'main'
+  push:
+    branches:
+      - main
 
 permissions:
-  contents: read
-  pull-requests: write
+  contents: write
+  pull-requests: read
 
 jobs:
-  create-pr:
+  release:
     runs-on: ubuntu-latest
     env:
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.ref_name }}
 
-      - name: Verify Branch
+      - name: Bump version
+        id: bump_version
         run: |
-          if [ "${{ github.ref_name }}" = "${{ github.event.inputs.base }}" ]; then
-            echo "Error: Cannot create a PR from the base branch (${{ github.ref_name }})."
-            exit 1
-          fi
-          echo "Creating PR from: ${{ github.ref_name }} to ${{ github.event.inputs.base }}"
+          set -euo pipefail
+          CURRENT_VERSION=$(grep '^version = ' pyproject.toml | cut -d '"' -f 2)
+          NEW_VERSION=$(python3 -c "v='$CURRENT_VERSION'.split('.'); v[-1]=str(int(v[-1])+1); print('.'.join(v))")
+          sed -i 's/^version = "'$CURRENT_VERSION'"/version = "'$NEW_VERSION'"/' pyproject.toml
+          echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
 
-      - name: Generate AI PR Description
-        id: ai_pr
+      - name: Commit and push changes
+        run: |
+          set -euo pipefail
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add pyproject.toml
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
+          git commit -m "chore: bump version to ${{ steps.bump_version.outputs.VERSION }} [skip ci]"
+          git push
+
+      - name: Generate AI Summary
+        id: ai_summary
         if: env.GEMINI_API_KEY != ''
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Get changes between this branch and main
-          BASE_BRANCH="${{ github.event.inputs.base }}"
-          DIFF=$(git log origin/$BASE_BRANCH..HEAD --oneline --no-merges | head -n 20)
-          
-          if [ -z "$DIFF" ]; then
-            echo "TITLE=Automated PR from $(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_OUTPUT
-            echo "BODY=No significant changes detected." >> $GITHUB_OUTPUT
-            exit 0
+          set -euo pipefail
+
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          if [ -n "$LAST_TAG" ]; then
+            CONTENT_LIST=$(gh pr list --state merged --base main --limit 50 --json title \
+              --template '{{range .}}- {{.title}}{{"\n"}}{{end}}')
+          else
+            CONTENT_LIST=$(gh pr list --state merged --limit 20 --json title \
+              --template '{{range .}}- {{.title}}{{"\n"}}{{end}}')
           fi
 
-          # Call Gemini API for Title and Body
-          export DIFF_CONTENT="$DIFF"
-          RESULT=$(python3 -c "
-          import os, json, http.client
-          api_key = os.getenv('GEMINI_API_KEY')
-          diff = os.getenv('DIFF_CONTENT')
-          prompt = f'Following is a list of commit messages. Please generate a professional Pull Request title and a concise description in Japanese. Format as JSON with \"title\" and \"body\" keys.\n\n{diff}'
-          
-          conn = http.client.HTTPSConnection('generativelanguage.googleapis.com')
-          headers = {'Content-Type': 'application/json'}
-          payload = {
-              'contents': [{'parts': [{'text': prompt}]}]
-          }
-          conn.request('POST', f'/v1beta/models/gemini-2.5-flash:generateContent?key={api_key}', json.dumps(payload), headers)
-          res = conn.getresponse()
-          data = json.loads(res.read().decode())
-          try:
-              text = data['candidates'][0]['content']['parts'][0]['text']
-              # Clean markdown if AI wrapped it in \`\`\`json
-              text = text.replace('\`\`\`json', '').replace('\`\`\`', '').strip()
-              print(text)
-          except:
-              print(json.dumps({'title': 'Manual PR Update', 'body': 'Updated via GitHub Action'}))
-          " )
-          
-          TITLE=$(echo "$RESULT" | jq -r .title)
-          BODY=$(echo "$RESULT" | jq -r .body)
+          if [ -z "${CONTENT_LIST// }" ]; then
+            if [ -n "$LAST_TAG" ]; then
+              CONTENT_LIST=$(git log "${LAST_TAG}..HEAD" --oneline --no-merges | head -n 50)
+            else
+              CONTENT_LIST=$(git log --oneline --no-merges | head -n 20)
+            fi
+          fi
 
-          # Escape for output
-          TITLE="${TITLE//'%'/'%25'}"
-          TITLE="${TITLE//$'\n'/'%0A'}"
-          TITLE="${TITLE//$'\r'/'%0D'}"
-          BODY="${BODY//'%'/'%25'}"
-          BODY="${BODY//$'\n'/'%0A'}"
-          BODY="${BODY//$'\r'/'%0D'}"
-          
-          echo "TITLE=$TITLE" >> $GITHUB_OUTPUT
-          echo "BODY=$BODY" >> $GITHUB_OUTPUT
-        shell: bash {0}
+          if [ -z "${CONTENT_LIST// }" ]; then
+            SUMMARY="- 内部改善（詳細なし）"
+          else
+            export CONTENT_LIST
+            SUMMARY=$(python3 << 'EOF'
+import os, json, http.client
+api_key = os.getenv("GEMINI_API_KEY")
+content = os.getenv("CONTENT_LIST","").strip()
+prompt = f"""
+あなたはリリースノート編集者です。以下の変更一覧（Pull Request / Commit）から、日本語で「What's New」を作成してください。
 
-      - name: Create Pull Request
+出力ルール（厳守）:
+- 出力は箇条書きのみ（- で始まる行）。見出し/前置き/理由/注釈は禁止。
+- 最大5項目。各項目は1文で簡潔に。
+- 根拠のない推測は禁止（例: 「安定性向上」「パフォーマンス改善」など確実に言えないことは書かない）。
+- 変更内容が不明瞭な場合は「内部改善（詳細なし）」と正直に書く。
+- 「承知しました」などの前置きは不要。
+
+変更一覧:
+{content}
+""".strip()
+
+def call(prompt: str) -> str:
+    conn = http.client.HTTPSConnection("generativelanguage.googleapis.com")
+    payload = {"contents":[{"parts":[{"text": prompt}]}]}
+    conn.request("POST", f"/v1beta/models/gemini-2.5-flash:generateContent?key={api_key}",
+                 json.dumps(payload), {"Content-Type":"application/json"})
+    res = conn.getresponse()
+    body = res.read().decode("utf-8")
+    if res.status != 200:
+        return "- 内部改善（詳細なし）"
+    data = json.loads(body)
+    text = data["candidates"][0]["content"]["parts"][0]["text"].strip()
+    if not text:
+        return "- 内部改善（詳細なし）"
+    if not text.lstrip().startswith("-"):
+        text = "- " + text.replace("\n"," ").strip()
+    return text
+
+try:
+    print(call(prompt))
+except Exception:
+    print("- 内部改善（詳細なし）")
+EOF
+            )
+          fi
+
+          {
+            echo "SUMMARY<<EOF"
+            echo "$SUMMARY"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.bump_version.outputs.VERSION }}
+          body: |
+            ## ✨ What's New
+            ${{ steps.ai_summary.outputs.SUMMARY || '- 内部改善（詳細なし）' }}
+          generate_release_notes: false
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Delete merged PR branches
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Check if PR already exists
-          EXISTS=$(gh pr list --head "${{ github.ref_name }}" --base "${{ github.event.inputs.base }}" --state open --json number --jq '.[0].number')
-          if [ -n "$EXISTS" ]; then
-            echo "PR already exists: #$EXISTS. Updating title and body if AI generated."
-            gh pr edit "$EXISTS" --title "${{ steps.ai_pr.outputs.TITLE }}" --body "${{ steps.ai_pr.outputs.BODY }}"
-          else
-            gh pr create \
-              --base "${{ github.event.inputs.base }}" \
-              --head "${{ github.ref_name }}" \
-              --title "${{ steps.ai_pr.outputs.TITLE || 'Manual PR' }}" \
-              --body "${{ steps.ai_pr.outputs.BODY || 'Created via Manual PR Creator Action' }}"
+          set -euo pipefail
+
+          # main へのマージ済みPRを最大50件取得（同一リポジトリのブランチだけ対象）
+          PRS=$(gh pr list --state merged --base main --limit 50 \
+            --json number,headRefName,headRepositoryOwner,headRepository \
+            --jq '.[] | @base64')
+
+          if [ -z "${PRS// }" ]; then
+            echo "No merged PRs found."
+            exit 0
           fi
+
+          echo "$PRS" | while read -r row; do
+            _jq() { echo "$row" | base64 --decode | jq -r "$1"; }
+
+            pr_number=$(_jq '.number')
+            branch=$(_jq '.headRefName')
+            repo_full=$(_jq '.headRepository.nameWithOwner')
+
+            # 保護：消したくないブランチ
+            if [[ "$branch" == "main" || "$branch" == "master" || "$branch" == "develop" || "$branch" == release/* ]]; then
+              echo "Skip protected branch: $branch (PR #$pr_number)"
+              continue
+            fi
+
+            # 既に消えてたらスキップ
+            if ! gh api -H "Accept: application/vnd.github+json" "/repos/$repo_full/git/ref/heads/$branch" >/dev/null 2>&1; then
+              echo "Branch already deleted: $repo_full:$branch (PR #$pr_number)"
+              continue
+            fi
+
+            echo "Deleting branch: $repo_full:$branch (PR #$pr_number)"
+            gh api -X DELETE -H "Accept: application/vnd.github+json" "/repos/$repo_full/git/ref/heads/$branch" || true
+          done
