--- a/.github/workflows/gh-pr.yml
+++ b/.github/workflows/gh-pr.yml
@@ -32,6 +32,12 @@ jobs:
           fi
           echo "Creating PR from: ${{ github.ref_name }} to ${{ github.event.inputs.base }}"
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+
+      - name: Install dependencies
+        run: uv sync
+
       - name: Generate AI PR Description
         id: ai_pr
         if: env.GEMINI_API_KEY != ''
@@ -62,7 +68,8 @@ jobs:
           export DIFF_CONTENT="$DIFF"
 
           # Gemini に JSON で title/body を作らせる
-          RESULT="$(python3 .github/scripts/generate_pr_description.py)"
+          RESULT="$(uv run python3 .github/scripts/generate_pr_description.py)"
+
 
           TITLE="$(echo "$RESULT" | jq -r '.title // "Manual PR Update"')"
           BODY="$(echo "$RESULT" | jq -r '.body // "Updated via GitHub Action"')"
