--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,12 @@ jobs:
           git commit -m "chore: bump version to ${{ steps.bump_version.outputs.VERSION }} [skip ci]"
           git push
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+
+      - name: Install dependencies
+        run: uv sync
+
       - name: Generate AI Summary
         id: ai_summary
         if: env.GEMINI_API_KEY != ''
