feat: Add new agents and tools for enhanced functionality
- Introduced pm_final_report_agent for generating final delivery reports.
- Added quality_reporter_agent to evaluate agent code quality and create GitHub issues for improvements.
- Implemented reviewer_agent to refine generated agents based on PM requirements.
- Created searcher_agent for gathering research materials and structuring them for agent instructions.
- Developed surfer_agent for exploring interesting topics and suggesting agent character traits.
- Added system_reviewer_agent to review the A4A framework and propose system improvements via GitHub issues.
- Implemented tool_creator_agent for creating and managing custom tools.
- Established various tools for editing agents and custom tools, including create, edit, list, and delete functionalities.
- Integrated GitHub issue and PR creation tools for seamless collaboration and version control.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "a4a"
+name = "a4a-lab"
 version = "0.2.18"
 description = "This project is A4A(Agent for Agent) of T2A(Text to Agent) and aim to CoA(Chain of AI) on AOTL(AI On The Loop)"
 readme = "README.md"
@@ -12,3 +12,9 @@ dependencies = [
     "fastapi>=0.109.0",
     "pyyaml>=6.0.3",
 ]
+
+[project.scripts]
+a4a = "a4a_lab.run:main"
+
+[tool.setuptools.packages.find]
+where = ["src"]
